HPSR-48 CSS quick fix to prevent history theme menu items from wrapping onto two lines.

--- a/sites/all/themes/history/css/menu.css
+++ b/sites/all/themes/history/css/menu.css
@@ -38,7 +38,7 @@ ul.nice-menu li {
   float: left;
   height: auto;
   width: auto;
-  padding: 5px 19px 5px 18px;
+  padding: 5px 16px 5px 18px;
 	display:inline-block;
 	text-decoration:none;
 	text-shadow:1px 1px 0px #000;
